# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "semsimian_server"
description = "A server for SemSimian, a semantic similarity service for biomedical ontologies"
version = "0.2.3"
edition = "2024"
homepage = "https://github.com/monarch-initiative/semsimian-server"
repository = "https://github.com/monarch-initiative/semsimian-server"
readme = "README.md"
license = "BSD-3-Clause"
authors = ["Glass Ships <glass.ships@protonmail.com"]

[dependencies]
semsimian = "=0.2.19"
clap = { version = "4.5.46", features = ["derive"] }
lazy_static = { version = ">=1.5.0", features = [] }
serde = ">=1.0.219"
# Web server dependencies
rocket = { version = "0.5.1", features = ["json"] }
# For downloading phenio
reqwest = { version = ">=0.12.23", features = ["blocking"] }
flate2 = "1.1.2"
tar = "0.4.44"

[lib]
name = "semsimian_server"
path = "src/lib.rs"

[[bin]]
name = "semserver"
path = "src/bin.rs"
